--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,4 @@ OPENAI_API_KEY=your_api_key_here
 # OpenAI Message Templates
 OPENAI_SYSTEM_MESSAGE=Your system message template here
 OPENAI_USER_MESSAGE_TEMPLATE=Your user message template here
-OPENAI_WEB_SEARCH_QUERY_TEMPLATE=Your web search query template here
+OPENAI_WEB_SEARCH_QUERY_TEMPLATE="Gather information about {company_query}. Specifically..."
